--- a/_posts/2019-04-16-Story Two.markdown
+++ b/_posts/2019-04-16-Story Two.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Story template"
+title:  "Story Two"
 categories: story
 ---
 To add new stories, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.md`.
